--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hii this sudhanshu gaur who is auther of this file</h1>
     <h2>and now i am adding new commitments</h2>
-    <h2>this is only show in main1 branch not in main branch untill i didn't merge both branches</h2>
+    <h2>this is only show in main branch not in main1 branch untill unless i didn't merge both branches</h2>
 </body>
 </html>
